# squad-station

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  install.sh  package.json  port_commands.js  squad.yml  withClaudeCodeTmux.toml
.claude/: CONTEXT_HANDOFF.md  gsd-file-manifest.json  settings.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.claude/commands/: orchestrator-template.md  (+3 more)
.gemini/: settings.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  SQUAD_ORCHESTRATOR_SUMMARY.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.squad/: models.md
assistant/: README.md
docs/: BUGS.md  GAP-ANALYSIS.md  INDEX.md  PLAYBOOK.md  RELEASE-PLAN-v0.6.0.md  SOLUTION-DESIGN.md  SQUAD-STATION-TUTORIAL.md  SYSTEM-DESIGN.md  TECH-STACK.md  VISION.md  bugs.vi.md
hooks/: claude-code-notify.sh  claude-code.sh  gemini-cli-notify.sh  gemini-cli.sh  test-notify-hooks.sh
npm-package/: CHANGELOG.md  README.md  package.json
scripts/: _common.sh  setup-sessions.sh  teardown-sessions.sh  tmux-send.sh  validate-squad.sh
src/: cli.rs  config.rs  hook_parser.rs  lib.rs  main.rs  providers.rs  tmux.rs
tests/: e2e_cli.sh  helpers.rs  test_cli.rs  test_close_reset_clean.rs  test_commands.rs  test_config.rs  test_db.rs  test_e2e_lifecycle.rs  test_init_hooks.rs  test_integration.rs  test_lifecycle.rs  test_notify_telegram.rs  test_views.rs
(+266 files in other folders)
